--- a/kort.html
+++ b/kort.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=480">
     <link rel="stylesheet" type="text/css" href="wpscripts/wpstyles.css">
     <style type="text/css">
-      .C-1 { line-height:34.80px;font-family:"Arial Black", sans-serif;font-style:normal;font-weight:normal;color:#000000;background-color:transparent;text-decoration:none;font-variant:normal;font-size:24.0px;vertical-align:0; }
+      .C-1 { line-height:24.00px;font-family:"Arial Black", sans-serif;font-style:normal;font-weight:normal;color:#ffffff;background-color:transparent;text-decoration:none;font-variant:normal;font-size:24.0px;vertical-align:0; }
       .OBJ-1 { background:#ff8000; }
       .OBJ-2 { background:#00d4ff; }
       .OBJ-3 { background:#00ff00; }
@@ -18,8 +18,8 @@
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?vs=3.3&amp;sensor=false"></script>
     <script type="text/javascript" src="wpscripts/jsWPGoogleMaps.js"></script>
   </head>
-  <body style="height:3145px;background:#ffffff;">
-    <div id="divMain" style="background:transparent;margin-left:auto;margin-right:auto;position:relative;width:480px;height:3145px;">
+  <body style="height:1765px;background:#ffffff;">
+    <div id="divMain" style="background:transparent;margin-left:auto;margin-right:auto;position:relative;width:480px;height:1765px;">
       <div class="OBJ-1" style="position:absolute;left:0px;top:96px;width:479px;height:36px;overflow:hidden;">
         <h3 class="Forestilling2"><span class="C-1">Teutonersalen</span></h3>
       </div>
