--- a/rosvang.html
+++ b/rosvang.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=479">
     <link rel="stylesheet" type="text/css" href="wpscripts/wpstyles.css">
     <style type="text/css">
-      .C-1 { line-height:34.80px;font-family:"Arial Black", sans-serif;font-style:normal;font-weight:normal;color:#000000;background-color:transparent;text-decoration:none;font-variant:normal;font-size:24.0px;vertical-align:0; }
+      .C-1 { line-height:24.00px;font-family:"Arial Black", sans-serif;font-style:normal;font-weight:normal;color:#ffffff;background-color:transparent;text-decoration:none;font-variant:normal;font-size:24.0px;vertical-align:0; }
       .OBJ-1 { background:#00d4ff; }
       .C-2 { line-height:18.00px;font-family:"Trebuchet MS", sans-serif;font-style:normal;font-weight:normal;color:#000000;background-color:transparent;text-decoration:none;font-variant:normal;font-size:13.3px;vertical-align:0; }
     </style>
@@ -16,15 +16,11 @@
   </head>
   <body style="height:879px;background:#ffffff;">
     <div id="divMain" style="background:transparent;margin-left:auto;margin-right:auto;position:relative;width:479px;height:879px;">
-      <map id="map1" name="map1">
-        <area shape="poly" coords="38,76,42,74,36,68,36,62,31,63,28,61,15,74,18,76,19,81,19,87,26,87,26,79,31,79,31,87,38,87" href="index.html" alt="">
-        <area shape="poly" coords="457,82,458,79,455,76,454,73,457,70,458,66,454,65,451,68,449,70,445,66,441,65,440,66,441,70,444,73,445,74,440,79,441,83,445,82,448,79,452,81,454,83" href="javascript:history.back()" alt="">
-      </map>
-      <img src="wpimages/wp54ff1784_06.png" alt="" width="479" height="879" usemap="#map1" style="position:absolute;left:0px;top:0px;width:479px;height:879px;">
+      <img alt="" src="wpimages/wp4995eaf9_06.png" style="position:absolute;left:0px;top:0px;width:479px;height:50px;">
       <div class="OBJ-1" style="position:absolute;left:0px;top:14px;width:479px;height:35px;overflow:hidden;">
         <h3 class="Forestilling2"><span class="C-1">Rosvang</span></h3>
       </div>
-      <div style="position:absolute;left:93px;top:143px;width:294px;height:143px;overflow:hidden;"><p class="Body"><span class="C-2">Kulturforeningen Rosvang<br>Rosvangvej 34, 7700 Thisted</span></p>
+      <map id="map1" name="map1"><area shape="poly" coords="38,76,42,74,36,68,36,62,31,63,28,61,15,74,18,76,19,81,19,87,26,87,26,79,31,79,31,87,38,87" href="index.html" alt=""><area shape="poly" coords="457,82,458,79,455,76,454,73,457,70,458,66,454,65,451,68,449,70,445,66,441,65,440,66,441,70,444,73,445,74,440,79,441,83,445,82,448,79,452,81,454,83" href="javascript:history.back()" alt=""></map><img src="wpimages/wpb3139bb3_06.png" alt="" width="479" height="879" usemap="#map1" style="position:absolute;left:0px;top:0px;width:479px;height:879px;"><div style="position:absolute;left:93px;top:143px;width:294px;height:143px;overflow:hidden;"><p class="Body"><span class="C-2">Kulturforeningen Rosvang<br>Rosvangvej 34, 7700 Thisted</span></p>
         <p class="Body"><span class="C-2">Heldagsudflugten Thy/Mors når frem til Rosvang kl 17.00.<br>Afgang fra gymnasiet 7. Juli kl. 09.30.</span></p></div>
       <div id="map_3" style="position:absolute;left:92px;top:298px;width:285px;height:285px;background-color:#e5e3df;">
         <p style="padding:1em;color:gray;">Loading...</p>
