--- a/ashoje.html
+++ b/ashoje.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=479">
     <link rel="stylesheet" type="text/css" href="wpscripts/wpstyles.css">
     <style type="text/css">
-      .C-1 { line-height:34.80px;font-family:"Arial Black", sans-serif;font-style:normal;font-weight:normal;color:#000000;background-color:transparent;text-decoration:none;font-variant:normal;font-size:24.0px;vertical-align:0; }
+      .C-1 { line-height:24.00px;font-family:"Arial Black", sans-serif;font-style:normal;font-weight:normal;color:#ffffff;background-color:transparent;text-decoration:none;font-variant:normal;font-size:24.0px;vertical-align:0; }
       .OBJ-1 { background:#00ff00; }
       .C-2 { line-height:18.00px;font-family:"Trebuchet MS", sans-serif;font-style:normal;font-weight:normal;color:#000000;background-color:transparent;text-decoration:none;font-variant:normal;font-size:13.3px;vertical-align:0; }
     </style>
@@ -16,11 +16,11 @@
   </head>
   <body style="height:880px;background:#ffffff;">
     <div id="divMain" style="background:transparent;margin-left:auto;margin-right:auto;position:relative;width:479px;height:880px;">
-      <img src="wpimages/wpaef4d583_06.png" alt="" width="479" height="879" style="position:absolute;left:0px;top:0px;width:479px;height:879px;">
+      <img alt="" src="wpimages/wp0ae7c974_06.png" style="position:absolute;left:0px;top:0px;width:479px;height:50px;">
       <div class="OBJ-1" style="position:absolute;left:0px;top:15px;width:479px;height:35px;overflow:hidden;">
         <h3 class="Forestilling2"><span class="C-1">Ashøje ved Hurup</span></h3>
       </div>
-      <img alt="" src="wpimages/wpd1044289_06.png" style="position:absolute;left:0px;top:94px;width:479px;height:2px;"><map id="map1" name="map1"><area shape="poly" coords="17,17,18,14,15,11,14,8,17,5,18,1,14,0,11,3,9,5,5,1,1,0,0,1,1,5,4,8,5,9,0,14,1,18,5,17,8,14,12,16,14,18" href="javascript:history.back()" alt=""></map><img alt="Back (history)" usemap="#map1" src="wpimages/wp4e46c25e_06.png" style="position:absolute;left:440px;top:65px;width:18px;height:18px;"><map id="map2" name="map2"><area shape="poly" coords="23,15,27,13,21,7,21,1,16,2,13,0,0,13,3,15,4,20,4,26,11,26,11,18,16,18,16,26,23,26" href="index.html" alt=""></map><img alt="Forside" usemap="#map2" src="wpimages/wpd9f21ef3_06.png" style="position:absolute;left:15px;top:61px;width:27px;height:26px;"><img alt="" src="wpimages/wp87b2a17d_06.png" style="position:absolute;left:0px;top:50px;width:479px;height:2px;"><img alt="" src="wpimages/wp4d215afd_06.png" style="position:absolute;left:0px;top:93px;width:478px;height:2px;"><div style="position:absolute;left:93px;top:111px;width:294px;height:119px;overflow:hidden;"><p class="Body"><span class="C-2">Ashøje, 7760 Hurup</span></p>
+      <map id="map1" name="map1"><area shape="poly" coords="38,76,42,74,36,68,36,62,31,63,28,61,15,74,18,76,19,81,19,87,26,87,26,79,31,79,31,87,38,87" href="index.html" alt=""><area shape="poly" coords="457,82,458,79,455,76,454,73,457,70,458,66,454,65,451,68,449,70,445,66,441,65,440,66,441,70,444,73,445,74,440,79,441,83,445,82,448,79,452,81,454,83" href="javascript:history.back()" alt=""></map><img src="wpimages/wpbbbd9637_06.png" alt="" width="479" height="879" usemap="#map1" style="position:absolute;left:0px;top:0px;width:479px;height:879px;"><div style="position:absolute;left:93px;top:111px;width:294px;height:119px;overflow:hidden;"><p class="Body"><span class="C-2">Ashøje, 7760 Hurup</span></p>
         <p class="Body"><span class="C-2">Fælles bustransport med besøg ved det litauiske monument i Thisted. <br>Afgang fra gymnasiet 5. Juli kl. 11.15.</span></p></div>
       <div id="map_2" style="position:absolute;left:95px;top:236px;width:285px;height:285px;background-color:#e5e3df;">
         <p style="padding:1em;color:gray;">Loading...</p>
