--- a/teutonersalen.html
+++ b/teutonersalen.html
@@ -7,34 +7,29 @@
     <meta name="viewport" content="width=479">
     <link rel="stylesheet" type="text/css" href="wpscripts/wpstyles.css">
     <style type="text/css">
-      .C-1 { line-height:16.00px;font-family:"Arial", sans-serif;font-style:normal;font-weight:normal;color:#000000;background-color:transparent;text-decoration:none;font-variant:normal;font-size:13.3px;vertical-align:0; }
-      .C-2 { line-height:34.80px;font-family:"Arial Black", sans-serif;font-style:normal;font-weight:normal;color:#000000;background-color:transparent;text-decoration:none;font-variant:normal;font-size:24.0px;vertical-align:0; }
+      .C-1 { line-height:24.00px;font-family:"Arial Black", sans-serif;font-style:normal;font-weight:normal;color:#ffffff;background-color:transparent;text-decoration:none;font-variant:normal;font-size:24.0px;vertical-align:0; }
       .OBJ-1 { background:#ff8000; }
+      .C-2 { line-height:16.00px;font-family:"Arial", sans-serif;font-style:normal;font-weight:normal;color:#000000;background-color:transparent;text-decoration:none;font-variant:normal;font-size:13.3px;vertical-align:0; }
     </style>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?vs=3.3&amp;sensor=false"></script>
     <script type="text/javascript" src="wpscripts/jsWPGoogleMaps.js"></script>
   </head>
   <body style="height:882px;background:#ffffff;">
     <div id="divMain" style="background:transparent;margin-left:auto;margin-right:auto;position:relative;width:479px;height:882px;">
-      <map id="map1" name="map1">
-        <area shape="poly" coords="38,76,42,74,36,68,36,62,31,63,28,61,15,74,18,76,19,81,19,87,26,87,26,79,31,79,31,87,38,87" href="index.html" alt="">
-        <area shape="poly" coords="457,82,458,79,455,76,454,73,457,70,458,66,454,65,451,68,449,70,445,66,441,65,440,66,441,70,444,73,445,74,440,79,441,83,445,82,448,79,452,81,454,83" href="javascript:history.back()" alt="">
-      </map>
-      <img src="wpimages/wpa2da5573_06.png" alt="" width="479" height="882" usemap="#map1" style="position:absolute;left:0px;top:0px;width:479px;height:882px;">
-      <div style="position:absolute;left:93px;top:116px;width:294px;height:104px;overflow:hidden;">
-        <p class="Body"><span class="C-1">Teutonersalen.</span></p>
-        <p class="Body"><span class="C-1">Thisted Gymnasium, Ringvej 32, </span></p>
-        <p class="Body"><span class="C-1">7700 Thisted</span></p>
-        <p class="Body"><span class="C-1"><br></span></p>
+      <img alt="" src="wpimages/wp02418aa9_06.png" style="position:absolute;left:0px;top:0px;width:479px;height:50px;">
+      <div class="OBJ-1" style="position:absolute;left:0px;top:15px;width:479px;height:35px;overflow:hidden;">
+        <h3 class="Forestilling2"><span class="C-1">Teutonersalen</span></h3>
       </div>
+      <map id="map1" name="map1"><area shape="poly" coords="38,76,42,74,36,68,36,62,31,63,28,61,15,74,18,76,19,81,19,87,26,87,26,79,31,79,31,87,38,87" href="index.html" alt=""><area shape="poly" coords="457,82,458,79,455,76,454,73,457,70,458,66,454,65,451,68,449,70,445,66,441,65,440,66,441,70,444,73,445,74,440,79,441,83,445,82,448,79,452,81,454,83" href="javascript:history.back()" alt=""></map><img src="wpimages/wp290ed15d_06.png" alt="" width="479" height="882" usemap="#map1" style="position:absolute;left:0px;top:0px;width:479px;height:882px;"><div style="position:absolute;left:93px;top:116px;width:294px;height:104px;overflow:hidden;"><p class="Body"><span class="C-2">Teutonersalen.</span></p>
+        <p class="Body"><span class="C-2">Thisted Gymnasium, Ringvej 32, </span></p>
+        <p class="Body"><span class="C-2">7700 Thisted</span></p>
+        <p class="Body"><span class="C-2"><br></span></p></div>
       <div id="map_1" style="position:absolute;left:95px;top:242px;width:285px;height:285px;background-color:#e5e3df;">
         <p style="padding:1em;color:gray;">Loading...</p>
       </div>
-      <div class="OBJ-1" style="position:absolute;left:0px;top:15px;width:479px;height:35px;overflow:hidden;">
-        <h3 class="Forestilling2"><span class="C-2">Teutonersalen</span></h3>
-      </div>
     </div>
-    <script type="text/javascript">wpGMapLoad( 'map_1', 56.9650763090174980, 8.6969393447052408, 16, 0, 1, 1, 1, 1, 1, 2, 
+    <script type="text/javascript">
+      wpGMapLoad( 'map_1', 56.9650763090174980, 8.6969393447052408, 16, 0, 1, 1, 1, 1, 1, 2, 
 [new wpGMapMarker( 55.4074444709347130, 10.3839254379272460, 0, 'NAVN PÅ LOKATION', 'SKRIV EN LABEL MED OPLYSNINGER', 0, 0, 1, false ),
 new wpGMapMarker( 56.9661406401014080, 8.6987471580505371, 0, 'Thisted gymnasium', 'Thisted Gymnasium\r\nRingvej 32, 7700 Thisted', 0, 0, 1, false )]
 , 'Failed to generate Google map.', '&lt;br&gt;Street view is not available at this location.');
